# rts_smoother

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: run_example.py
python/rts_smoother/: __init__.py  rts_smoother.py
src/: kalman.cpp
